--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "Frontend drag and drop library",
   "main": "index.js",
   "scripts": {
-    "start": "webpack --config webpack.config.js",
-    "dev": "webpack --config webpack.config.js --watch",
+    "start": "webpack --config webpack.config.js --watch",
+    "dev": "webpack --config webpack.config.js",
     "prd": "webpack -p --mode=production --config webpack.config.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
