--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "webpack --config webpack.config.js --watch",
     "dev": "webpack --config webpack.config.js",
     "prd": "webpack -p --mode=production --config webpack.config.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "lint": "eslint --config .eslintrc.json --ext .js src/"
   },
   "author": "louisz",
   "license": "ISC",
@@ -15,6 +16,7 @@
     "@babel/core": "^7.9.0",
     "@babel/preset-env": "^7.9.0",
     "@babel/preset-react": "^7.9.1",
+    "babel-eslint": "^10.1.0",
     "babel-loader": "^8.1.0",
     "eslint": "^6.8.0",
     "webpack": "^4.41.6",
