--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "webpack --config webpack.config.js --watch",
-    "dev": "webpack --config webpack.config.js",
-    "prd": "webpack -p --mode=production --config webpack.config.js",
+    "dev": "webpack --stats-error-details --config webpack.config.js",
+    "prd": "webpack --mode=production --config webpack.config.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "lint": "eslint --config .eslintrc.json --ext .js src/"
   },
@@ -18,8 +18,12 @@
     "@babel/preset-react": "^7.9.1",
     "babel-eslint": "^10.1.0",
     "babel-loader": "^8.1.0",
-    "eslint": "^6.8.0",
-    "webpack": "^4.41.6",
-    "webpack-cli": "^3.3.11"
+    "eslint": "^6.8.0"
+  },
+  "dependencies": {
+    "ts-loader": "^9.2.3",
+    "typescript": "^4.3.5",
+    "webpack": "^5.45.1",
+    "webpack-cli": "^4.7.2"
   }
 }
