--- a/package.json
+++ b/package.json
@@ -7,8 +7,17 @@
     "start": "webpack --config webpack.config.js --watch",
     "dev": "webpack --stats-error-details --config webpack.config.js",
     "prd": "webpack --mode=production --config webpack.config.js",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest --config package.json",
     "lint": "eslint --config .eslintrc.json --ext .js src/"
+  },
+  "jest": {
+    "verbose": true,
+    "rootDir": "./test",
+    "moduleDirectories": [
+      "node_modules",
+      "src"
+    ],
+    "testEnvironment": "jsdom"
   },
   "author": "louisz",
   "license": "ISC",
@@ -16,9 +25,11 @@
     "@babel/core": "^7.9.0",
     "@babel/preset-env": "^7.9.0",
     "@babel/preset-react": "^7.9.1",
+    "@babel/preset-typescript": "^7.14.5",
     "babel-eslint": "^10.1.0",
     "babel-loader": "^8.1.0",
-    "eslint": "^6.8.0"
+    "eslint": "^6.8.0",
+    "jest": "^27.0.6"
   },
   "dependencies": {
     "ts-loader": "^9.2.3",
